--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../css/layout.css">
 	<link rel="stylesheet" href="../css/color.css">
 	<link rel="stylesheet" href="../css/type.css">
-	<link rel="stylesheet" href="../css/wires.css">
+	<!--<link rel="stylesheet" href="../css/wires.css">-->
 
 	<title id="head-title">softstuff.uk</title>
 </head>
