--- a/html/timefiles.html
+++ b/html/timefiles.html
@@ -15,6 +15,7 @@
 		<p>Because time flies...</p>
 		
 	</main>
+	<script src="../js/toolBox.js"></script>
 	<script src="../js/script.js"></script>
 </body>
 </html>
