changes made the other day

--- a/html/timefiles.html
+++ b/html/timefiles.html
@@ -5,16 +5,32 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sriracha">
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Heebo:800">
 
-	<title id="head-title">Time Files - softstuff.uk</title>
+	<link rel="stylesheet" href="../css/layout.css">
+	<link rel="stylesheet" href="../css/color.css">
+	<link rel="stylesheet" href="../css/type.css">
+	<link rel="stylesheet" href="../css/wires.css">
+
+	<title id="head-title">softstuff.uk</title>
 </head>
 <body>
-	<main>
-		<h1><a href="index.html">Time Files</a></h1>
-		<p>Because time flies...</p>
+	<div id="wrapper">
 		
-	</main>
+		<header>
+			<h1><a href="index.html">Time Files</a></h1>
+		</header>
+		<main>
+			<div>
+				<p>Because time flies...</p>
+				
+			</div>
+			<div>
+				
+			</div>
+		</main>
+		<footer>Ruairi Gann &copy; 2018</footer>
+	</div> <!-- end of #wrapper -->
 	<script src="../js/toolBox.js"></script>
 	<script src="../js/script.js"></script>
 </body>
