started creating the time files layout, added a nice random color output

--- a/html/rps.html
+++ b/html/rps.html
@@ -41,7 +41,7 @@
 					<button id="rps-scissors" type="button" name="scissors">Scissors</button>
 				</form>
 			</div>
-			<div>
+			<div id="sidebar">
 				<ul>
 					<li><a href="databending.html">Databending</a></li>
 					<li><a href="timefiles.html">Time Files</a></li>
