--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../css/layout.css">
 	<link rel="stylesheet" href="../css/color.css">
 	<link rel="stylesheet" href="../css/type.css">
-	<!--<link rel="stylesheet" href="../css/wires.css">-->
+	<link rel="stylesheet" href="../css/wires.css">
 
 	<title id="head-title">softstuff.uk</title>
 </head>
@@ -30,7 +30,7 @@
 			<div>
 				<p>I thought I should do more stuff with software.<br>This is a website where you can see, hear, interact with that stuff etc.</p>
 			</div>
-			<div>
+			<div id="sidebar">
 				<ul>
 					<li><a href="databending.html">Databending</a></li>
 					<li><a href="timefiles.html">Time Files</a></li>
