--- a/html/timefiles.html
+++ b/html/timefiles.html
@@ -10,7 +10,9 @@
 	<link rel="stylesheet" href="../css/layout.css">
 	<link rel="stylesheet" href="../css/color.css">
 	<link rel="stylesheet" href="../css/type.css">
-	<link rel="stylesheet" href="../css/wires.css">
+	<!--<link rel="stylesheet" href="../css/wires.css">-->
+
+	<link rel="stylesheet" type="text/css" href="../css/timefiles.css">
 
 	<title id="head-title">softstuff.uk</title>
 </head>
@@ -23,15 +25,54 @@
 		<main>
 			<div>
 				<p>Because time flies...</p>
-				
+				<!-- start of time files area -->
+				<div id="tf-wrapper">
+					<h3>August</h3>
+					<div id="tf-grid">
+						<div class="tf-month-day">1</div>
+						<div class="tf-month-day">2</div>
+						<div class="tf-month-day">3</div>
+						<div class="tf-month-day">4</div>
+						<div class="tf-month-day">5</div>
+						<div class="tf-month-day">6</div>
+						<div class="tf-month-day">7</div>
+						<div class="tf-month-day">8</div>
+						<div class="tf-month-day">9</div>
+						<div class="tf-month-day">10</div>
+						<div class="tf-month-day">11</div>
+						<div class="tf-month-day">12</div>
+						<div class="tf-month-day">13</div>
+						<div class="tf-month-day">14</div>
+						<div class="tf-month-day">15</div>
+						<div class="tf-month-day">16</div>
+						<div class="tf-month-day">17</div>
+						<div class="tf-month-day">18</div>
+						<div class="tf-month-day">19</div>
+						<div class="tf-month-day">20</div>
+						<div class="tf-month-day">21</div>
+						<div class="tf-month-day">22</div>
+						<div class="tf-month-day">23</div>
+						<div class="tf-month-day">24</div>
+						<div class="tf-month-day">25</div>
+						<div class="tf-month-day">26</div>
+						<div class="tf-month-day">27</div>
+						<div class="tf-month-day">28</div>
+						<div class="tf-month-day">29</div>
+						<div class="tf-month-day">30</div>
+						<div class="tf-month-day">31</div>
+						<div class="tf-month-day">32</div>
+					</div>
+					<div id="tf-nav"> < July September > </div>
+				</div>
+				<!-- end of time files area -->
 			</div>
-			<div>
-				
+			<div id="sidebar">
 			</div>
 		</main>
 		<footer>Ruairi Gann &copy; 2018</footer>
 	</div> <!-- end of #wrapper -->
 	<script src="../js/toolBox.js"></script>
 	<script src="../js/script.js"></script>
+	<script src="../js/timefiles.js"></script>
 </body>
 </html>
