made a lot of changes, mostly to the js

--- a/html/index.html
+++ b/html/index.html
@@ -7,10 +7,11 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sriracha">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Heebo:800">
 
-	<link rel="stylesheet" href="../css/layout.css">
+	<link rel="stylesheet" href="../css/layout.css" id="layout">
 	<link rel="stylesheet" href="../css/color.css">
 	<link rel="stylesheet" href="../css/type.css">
-	<link rel="stylesheet" href="../css/wires.css">
+
+	<link rel="stylesheet" href="../css/wires.css" id="wires">
 
 	<title id="head-title">softstuff.uk</title>
 </head>
