--- a/html/timefiles.html
+++ b/html/timefiles.html
@@ -10,8 +10,8 @@
 	<link rel="stylesheet" href="../css/layout.css">
 	<link rel="stylesheet" href="../css/color.css">
 	<link rel="stylesheet" href="../css/type.css">
-	<!--<link rel="stylesheet" href="../css/wires.css">-->
-
+	<link rel="stylesheet" href="../css/wires.css" id="wires">
+	
 	<link rel="stylesheet" type="text/css" href="../css/timefiles.css">
 
 	<title id="head-title">softstuff.uk</title>
@@ -28,7 +28,7 @@
 				<!-- start of time files area -->
 				<div id="tf-wrapper">
 					<h3>August</h3>
-					<div id="tf-grid">
+					<div id="tf-month">
 						<div class="tf-month-day">1</div>
 						<div class="tf-month-day">2</div>
 						<div class="tf-month-day">3</div>
@@ -61,8 +61,11 @@
 						<div class="tf-month-day">30</div>
 						<div class="tf-month-day">31</div>
 						<div class="tf-month-day">32</div>
-					</div>
-					<div id="tf-nav"> < July September > </div>
+					</div> <!-- end of tf-grid -->
+					<div id="tf-month-nav"> < July September > </div>
+					<div id="tf-day">
+						<div class="tf-day-i"></div>
+					</div> <!-- end of tf-day -->
 				</div>
 				<!-- end of time files area -->
 			</div>
@@ -72,7 +75,7 @@
 		<footer>Ruairi Gann &copy; 2018</footer>
 	</div> <!-- end of #wrapper -->
 	<script src="../js/toolBox.js"></script>
-	<script src="../js/script.js"></script>
 	<script src="../js/timefiles.js"></script>
+	<script src="../js/script.js"></script>
 </body>
 </html>
