made rps game hide if JS is disabled

--- a/html/rps.html
+++ b/html/rps.html
@@ -26,19 +26,22 @@
 			</nav>-->
 		</header>
 		<main>
-			<div id="rps-container">
-				<span id="rps-result">
-					Make your choice...
-					<ul>
-						<li>Score:</li>
-						<li>High:</li>
-					</ul>
-				</span>
-				<form id="rps-form" method="post" action="">
-					<button id="rps-rock" type="button" name="rock">Rock</button>
-					<button id="rps-paper" type="button" name="paper">Paper</button>
-					<button id="rps-scissors" type="button" name="scissors">Scissors</button>
-				</form>
+			<div>
+				<p id="js-notice">This game requires Javascript.</p>
+				<div id="rps-container">
+					<span id="rps-result">
+						Make your choice...
+						<ul>
+							<li>Score:</li>
+							<li>High:</li>
+						</ul>
+					</span>
+					<form id="rps-form" method="post" action="">
+						<button id="rps-rock" type="button" name="rock">Rock</button>
+						<button id="rps-paper" type="button" name="paper">Paper</button>
+						<button id="rps-scissors" type="button" name="scissors">Scissors</button>
+					</form>
+				</div>
 			</div>
 			<div id="sidebar">
 				<ul>
