--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="../css/color.css">
 	<link rel="stylesheet" href="../css/type.css">
 
-	<link rel="stylesheet" href="../css/wires.css" id="wires" disabled="disabled">
+	<link rel="stylesheet" href="../css/wires.css" id="wires">
 
 	<title id="head-title">softstuff.uk</title>
 </head>
