refined some CSS, added form to timefiles.html and made the layout more dynamic

--- a/html/index.html
+++ b/html/index.html
@@ -3,29 +3,20 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+	<!-- links to fonts -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sriracha">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Heebo:800">
-
-	<link rel="stylesheet" href="../css/layout.css" id="layout">
+	<!-- links to local stylesheets -->
+	<link rel="stylesheet" href="../css/layout.css">
 	<link rel="stylesheet" href="../css/color.css">
 	<link rel="stylesheet" href="../css/type.css">
-
 	<link rel="stylesheet" href="../css/wires.css" id="wires">
-
 	<title id="head-title">softstuff.uk</title>
 </head>
 <body>
 	<div id="wrapper">
 		<header>
 			<h1><a href="index.html">Soft Stuff</a></h1>
-			<!--<nav>
-				<ul>
-					<li>projects</li>
-					<li>posts</li>
-					<li>contact</li>
-				</ul>
-			</nav>-->
 		</header>
 		<main>
 			<div>
